# S2B2S

./: .gitignore  AGENTS.md  AIVORELAY_INSPIRED_IMPROVEMENTS.md  AIVO_RELAY_IMPLEMENTATION_PLAN.md  AIVO_update_integration_plan.md  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  CONTRIBUTING_TRANSLATIONS.md  CRUSH.md  DEPENDENCY_UPDATES.md  IMPROVEMENT_PLAN.md  LICENSE  LLAMA_CPP.md  README.md  S2B2S_ANDROID_COMPANION.md  S2B2S_REVIEW.md  S2B2S_repomix.txt  S2B2S_repomix_annotated.txt  STATUS.md  android-port-plan.md  eslint.config.js  flake.nix  improvement-plan.md  index.html  package.json  qwen3_cuda13_compilation.md  reference_github_links.md  reference_links.md  repomix-file-descriptions.md  repomix.config.json  tsconfig.json  vite.config.ts
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: build-main.yml  build-test.yml  build.yml  ci.yml  nix-check.yml  pr-test-build.yml  release.yml
0.1.3 analysis/: 00_START_HERE.md  01_STATE_OF_THE_PROJECT.md  02_ROADMAP_IN_ORDER.md  03_CLEANUP_KILL_LIST.md  04_CODE_FINDINGS.md
analysys/: 00_OVERVIEW.md  01_REPO_REVIEW.md  02_GPU_OVERLAY_ARCHITECTURE.md  03_CONVERSATION_MODE_2.md  04_AVATAR_SPEC.md  05_IMPLEMENTATION_ROADMAP.md
docs/: android.md  integration_plan_s2s_transcribe_cpp.md  references.md  vision.md
futuristic_analysis/: 00_README_START_HERE.md  01_S2B2S_REVIEW.md  02_REFERENCE_PROJECTS.md  03_GPU_OVERLAY_ARCHITECTURE.md  04_CONVERSATION_MODE_2.md  05_VISION_AND_SCREEN_UNDERSTANDING.md  06_AVATAR_SPEC.md  07_IMPLEMENTATION_ROADMAP.md  08_TRANSPARENT_OVERLAY_IMPL_PLAN.md
gemma_4_qat_mtp_e2b/: MULTIMODAL.md  REFERENCE.md
models/: download_models.ps1  download_models.sh
nix/: hm-module.nix  module.nix
references_comparative_analysis_md/: 00_COMPARATIVE_ANALYSIS.md  AIVORelay_review.md  ANALYSIS_TEMPLATE.md  ARCHITECTURE_PATTERNS_CATALOG.md  Cross_Platform_Rust_WebGPU_CursorFX_review.md  FORK_LINEAGE.md  Handy_review.md  LICENSE_COMPATIBILITY.md  LocalAI_review.md  Parakeet-Realtime-Transcriber_review.md  Parler_review.md  Parrot_review.md  README.md  TD_Web_Trail_review.md  TTS-Audio-Suite_review.md  TranscriptionSuite_review.md  copyspeak-tts_review.md  onnx-asr_review.md  pocket-tts-server_review.md  sherpa-onnx_review.md  speech-recognition_review.md  speechbrain_review.md  transcribe-rs_review.md  vibevoice-rs_review.md  voicebox_review.md  voirs_review.md  vox_review.md  whispering_review.md
scratch/: test_qwentts_gguf.py
scripts/: build-windows.ps1  check-deps.ts  check-latest.ts  check-nix-deps.ts  compile-qwen3-ggml.ps1  download-libclang.ps1  find-bigints.ts  find-command-bigints.ts  install-speech-runtime.ps1  install-speech-runtime.sh  repomix-with-descriptions.ts  resolve-conflicts.mjs  setup_tts_venv.ps1  setup_tts_venv.sh  setup_venv_uv.ps1  sync-all-repos.ps1  sync-translations.ts  update-all-deps.ts
src/: App.css  App.tsx  bindings.ts
src-tauri/: .gitignore  .taurignore  Cargo.toml  build.rs  kitten_server.py  kokoro_server.py  pocket_server.py  qwen3_server.py  sherpa_onnx_server.py  tauri.conf.json  unified_parakeet_server.py
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/nsis/: installer.nsi
src-tauri/src/: actions.rs  active_app.rs  audio_feedback.rs  cli.rs  clipboard.rs  clipboard_ax.rs  control_server.rs  crash_logging.rs  crypto.rs  input.rs  input_source.rs  job_object.rs  lib.rs  llm_client.rs  llm_operation.rs  main.rs  overlay.rs  portable.rs  session_manager.rs  settings.rs  temp_artifacts.rs  text_replacement_decapitalize.rs  transcription_coordinator.rs  tray.rs  url_security.rs  utils.rs  wake_word.rs  webview_hardening.rs  webview_runtime.rs
src-tauri/src/audio_toolkit/: mod.rs  text.rs
src-tauri/src/audio_toolkit/audio/: device.rs  mod.rs  noise_suppression.rs  recorder.rs  resampler.rs  utils.rs
src-tauri/src/audio_toolkit/vad/: mod.rs  silero.rs  triple_vad.rs
src-tauri/src/brain/: client.rs  llama_manager.rs  manager.rs  mod.rs
src-tauri/src/catalog/: catalog.json
src-tauri/src/commands/: audio.rs  brain.rs  discovery.rs  history.rs  llama_server.rs  mod.rs  models.rs  system.rs  transcription.rs  tts.rs  wake_word.rs
src-tauri/src/helpers/: clamshell.rs  mod.rs
src-tauri/src/llama_server/: manager.rs  mod.rs
src-tauri/src/managers/: audio.rs  continuous_voice.rs  history.rs  mod.rs  model.rs  moonshine_streaming_shim.rs  native_streaming_latency.rs  transcription.rs  transcription_mock.rs
src-tauri/src/overlay_fx/: capabilities.rs  commands.rs  cursor_follow.rs  events.rs  mod.rs  placement.rs  trail.rs  window.rs
src-tauri/src/overlay_fx/native/: mod.rs  shader.wgsl
src-tauri/src/shortcut/: handler.rs  key_listener.rs  mod.rs
src-tauri/src/stt/: mod.rs  multi_stt.rs  unified_parakeet.rs
src-tauri/src/tts/: audio_format.rs  clipboard_watch.rs  fragment_queue.rs  local_tts_server.rs  manager.rs  mod.rs  pagination.rs  player.rs  status.rs  telemetry.rs
src-tauri/src/tts/backends/: cartesia.rs  elevenlabs.rs  kitten.rs  kokoro.rs  mod.rs  openai.rs  piper.rs  piper_server.rs  pocket.rs  qwen3.rs  sapi.rs
src-tauri/src/tts/sanitize/: cleanup.rs  itn.rs  markdown.rs  mod.rs  tn.rs  tts_normalize.rs
src/brain-overlay/: BrainOverlayApp.tsx  index.html  main.tsx
src/brain-overlay/avatar/: Avatar3D.tsx
src/components/: AccessibilityPermissions.tsx  HerLoading.tsx  Sidebar.tsx
src/components/conversation/: ConversationView.tsx
src/components/footer/: BrainSelector.tsx  Footer.tsx  (+3 more)
src/hooks/: useLlamaState.ts  useModelFilters.ts  useProviderState.ts  useSettings.ts
src/lib/: modelDownloadActivation.ts  permissions.ts
src/overlay/: RecordingOverlay.css  RecordingOverlay.tsx
src/stores/: modelStore.ts  sessionToastStore.ts  settingsStore.ts
src/utils/: dateFormat.ts
temp_export_onnx/: .gitignore  README.md  download_nemo.py  export_unified.ps1  notes.md  setup_venv.ps1  setup_venv.sh
tests/: app.spec.ts
tests/helpers/: tauri-mock.ts
tests/specs/: conversation.spec.ts  dictation.spec.ts  onboarding.spec.ts
(+82 files in other folders)
