[package]
name = "s2b2s"
version = "0.1.0"
description = "S2B2S - SpeechToBrainToSpeech"
authors = ["NairoDorian"]
edition = "2021"
rust-version = "1.87"
license = "MIT"
default-run = "s2b2s"

[profile.dev]
incremental = true # Compile your binary in smaller steps.

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "s2b2s_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[features]
overlay-native = []

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }
serde_json = "1.0.150"
serde = { version = "1.0.228", features = ["derive"] }

[dependencies]
once_cell = "1.21.4"
tauri = { version = "2.11.2", features = [
  "protocol-asset",
  "macos-private-api",
  "tray-icon",
  'image-png',
] }
tauri-plugin-log = "2.8.0"
tauri-plugin-opener = "2.5.4"
tauri-plugin-store = "2.4.3"
tauri-plugin-os = "2.3.2"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-macos-permissions = "2.3.0"
tauri-plugin-process = "2.3.1"
rusqlite_migration = "2.6.0"
tauri-plugin-fs = "2.5.1"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
rdev = { git = "https://github.com/rustdesk-org/rdev" }
# Pinned to 0.17 (latest usable): rodio 0.22 requires cpal ^0.17, and a single
# cpal version is mandatory because audio_feedback hands a cpal Device to rodio.
cpal = "0.17"
anyhow = "1.0.102"
rubato = "3.0.0"
# rubato 3.0 exposes audio I/O through these adapter crates (same version rubato uses).
audioadapter = "3.0"
audioadapter-buffers = "3.0"
hound = "3.5.1"
log = "0.4.32"
env_filter = "1.0.1"
tokio = "1.52.3"
vad-rs = { git = "https://github.com/cjpais/vad-rs", default-features = false }
enigo = "0.6.1"
rodio = "0.22"
reqwest = { version = "0.13", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
rustfft = "6.4.1"
strsim = "0.11.1"
natural = "0.5.0"
regex = "1.12.4"
chrono = "0.4.45"
rusqlite = { version = "0.40.1", features = ["bundled"] }
nnnoiseless = { version = "0.5.2", default-features = false }
tar = "0.4.46"
flate2 = "1.1.9"
sha2 = "0.11.0"
transcribe-rs = { version = "0.3.11", features = ["whisper-cpp", "onnx"] }
handy-keys = "0.2.4"
ferrous-opencc = "0.4.0"
clap = { version = "4.6.1", features = ["derive"] }
specta = "=2.0.0-rc.25"
specta-typescript = "0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }
tauri-plugin-dialog = "2.7.1"
text-processing-rs = "0.2.2"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.4"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2.5.1"
tauri-plugin-global-shortcut = "2.3.2"
tauri-plugin-single-instance = "2.4.2"
tauri-plugin-updater = "2.10.1"

[target.'cfg(windows)'.dependencies]
transcribe-rs = { version = "0.3.11", features = ["ort-directml"] }
windows = { version = "0.62.2", features = [
  "Win32_Media_Audio_Endpoints",
  "Win32_System_Com_StructuredStorage",
  "Win32_System_DataExchange",
  "Win32_System_Threading",
  "Win32_System_Diagnostics_ToolHelp",
  "Win32_System_Variant",
  "Win32_Foundation",
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Dxgi",
  "Win32_Graphics_Dxgi_Common",
  "Wdk_Graphics_Direct3D",
] }
winreg = "0.56"

[target.'cfg(target_os = "macos")'.dependencies]
tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2.1" }
transcribe-rs = { version = "0.3.11", features = ["whisper-metal"] }

[target.'cfg(target_os = "linux")'.dependencies]
gtk-layer-shell = { version = "0.8", features = ["v0_6"] }
gtk = "0.18.2"
transcribe-rs = { version = "0.3.11", features = ["whisper-vulkan"] }

[dev-dependencies]
tempfile = "3"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "unwind"
